rustdocs/errors/rust-bitcoin-units-src-fee_rate-mod.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/units/src/fee_rate/mod.rs:8:5
  |
8 | use core::num::NonZeroU64;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/units/src/fee_rate/mod.rs:9:5
  |
9 | use core::ops;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `crate::result`
  --> ../rust-bitcoin/units/src/fee_rate/mod.rs:15:12
   |
15 | use crate::result::{MathOp, NumOpError as E, NumOpResult};
   |            ^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `std::result`

error[E0432]: unresolved imports `crate::Amount`, `crate::Weight`
  --> ../rust-bitcoin/units/src/fee_rate/mod.rs:16:13
   |
16 | use crate::{Amount, Weight};
   |             ^^^^^^  ^^^^^^ no `Weight` in the root
   |             |
   |             no `Amount` in the root

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/units/src/fee_rate/mod.rs:36:5
   |
36 | use internals::const_casts;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 5 + extern crate internals;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/units/src/fee_rate/mod.rs:222:8
    |
222 | crate::internal_macros::impl_op_for_references! {
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/units/src/fee_rate/mod.rs:241:8
    |
241 | crate::internal_macros::impl_add_assign!(FeeRate);
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/units/src/fee_rate/mod.rs:242:8
    |
242 | crate::internal_macros::impl_sub_assign!(FeeRate);
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
